<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="transaction_cancelled">Transaction cancelled</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="internet_not_working_properly">Internet not working properly</string>
    <string name="feature_payment_payment">Payment</string>
    <string name="feature_payment_to_pay_n">To Pay : \u20B9%.2f</string>
    <string name="feature_payment_upi">Upi</string>
    <string name="feature_payment_upi_apps">Upi Apps</string>
    <string name="feature_payment_add_a_new_upi_id">Add a new UPI ID</string>
    <string name="feature_payment_add_upi_id">Add UPI ID</string>
    <string name="feature_payment_you_need_to_have_a_registered_upi_id">You need to have a registered UPI ID.</string>
    <string name="feature_payment_enter_your_upi_id">Enter your UPI ID</string>
    <string name="feature_payment_verify_and_pay">Verify and Pay</string>
    <string name="feature_payment_incorrect_upi_id">Incorrect UPI ID</string>
    <string name="feature_payment_processing_payment">Processing payment</string>
    <string name="feature_payment_we_are_verifying_your_payment_status">We are verifying your payment status.</string>
    <string name="feature_payment_transaction_failed">Transaction Failed</string>
    <string name="feature_payment_amount_n">Amount : \u20B9%.2f</string>
    <string name="feature_payment_any_amount_deducted_will_be_refunded_within_n_days">Any amount deducted will be refunded within 2–4 days.</string>
    <string name="feature_payment_try_other_payment_method">Try other payment method</string>
    <string name="feature_payment_cancel">Cancel</string>
    <string name="feature_payment_not_now">Not now</string>
    <string name="feature_payment_yes_cancel">Yes, cancel</string>
    <string name="feature_payment_cancel_payment">Cancel payment</string>
    <string name="feature_payment_open_your_upi_and_complete_the_payment_request_from_jar">Open your UPI app and complete\nthe payment request from Jar</string>
    <string name="feature_payment_approve_payment_within">Approve payment within</string>
    <string name="feature_payment_note_please_dont_hit_back_until_the_transaction_is_complete">Note: Please don’t hit back until the\ntransaction is complete.</string>
    <string name="feature_payment_perc_100_safe_and_secure_payments">100% safe and secure payments</string>
    <string name="feature_payment_are_you_sure_you_want_to_cancel_payment">Are you sure you want to\ncancel payment?</string>
    <string name="feature_payment_the_payment_request_will_get_cancelled">The payment request will get cancelled\nonly if you have not completed the\npayment on UPI Bank app.</string>
    <string name="feature_payment_you_are_buying_n_gm_of_24k_pure_gold">You are buying %sgm of 24k pure gold</string>
    <string name="feature_payment_minutes">mins</string>
    <string name="feature_payment_continue_payment">Continue payment</string>
    <string name="feature_payment_maybe_later">Maybe later</string>
    <string name="feature_payment_for_amount_n_you_will_get_m_gm_of_gold">For amount \u20B9%.2f you\'ll now get %.4fgm\nof gold.</string>
    <string name="feature_payment_gold_price_has_increased">Gold price has increased.</string>
    <string name="feature_payment_gold_price_has_decreased">Gold price has decreased.</string>
    <string name="feature_payment_updated_buy_price_n_per_gm">Updated buy price : \u20B9%.2f/gm.</string>
    <string name="feature_payment_recently_used">Recently used</string>
    <string name="feature_payment_pay">Pay</string>
    <string name="feature_payment_add_a_new_card">Add a new card</string>
    <string name="feature_payment_pay_using_your_debit_or_credit_card">Pay using your Credit and Debit cards.</string>
    <string name="feature_payment_next">Next</string>
    <string name="feature_payment_proceed_to_pay">Proceed to pay</string>
    <string name="feature_payment_invalid_card_number_please_try_agin">Invalid card number. Please try again.</string>
    <string name="feature_payment_invalid_expiry_date_please_try_agin">Invalid Expiry date. Please try again.</string>
    <string name="feature_payment_cards">Cards</string>
    <string name="feature_payment_enter_your_cvv">Enter your CVV.</string>
    <string name="feature_payment_saved_upi_ids">Saved UPI IDs</string>
    <string name="feature_payment_edit_previous_details"><u>Edit previous details</u></string>
    <string name="feature_payment_tap_to_edit">Tap to edit</string>
    <string name="feature_payment_incorrect_card_details">Incorrect card details.</string>
    <string name="feature_payment_gold_price_gone_down">Lucky you!\nGold prices have gone down📉</string>
    <string name="feature_payment_gold_price_on_rise">Hurry up!\nGold prices are on the rise📈</string>
</resources>