<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:background="@color/bgColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/feature_payment_bg_rounded_12dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="36dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/feature_payment_ic_gold_price_increased" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeaderGoldPrice"
            style="@style/BigTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/feature_payment_gold_price_has_increased"
            android:textColor="@color/color_282E3D"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icIcon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            style="@style/CommonTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/feature_payment_for_amount_n_you_will_get_m_gm_of_gold"
            android:textColor="@color/color_282E3D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderGoldPrice" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/core_ui_separator"
            android:backgroundTint="#3D484D5C"
            app:layout_constraintTop_toBottomOf="@id/tvDesc" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUpdatedPrice"
            style="@style/CommonTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/feature_payment_updated_buy_price_n_per_gm"
            android:textColor="#A6435162"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/feature_payment_bg_rounded_45dp"
            android:backgroundTint="@color/color_3C3357"
            android:gravity="center"
            android:paddingHorizontal="45dp"
            android:paddingVertical="20dp"
            android:text="@string/feature_payment_continue_payment"
            android:textColor="@color/white"
            app:fontFamily="@font/inter_bold"
            app:layout_constraintTop_toBottomOf="@id/tvUpdatedPrice"
            app:textAllCaps="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnMaybeLater"
            style="@style/CommonTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            android:text="@string/feature_payment_maybe_later"
            android:textColor="@color/color_282E3D"
            app:fontFamily="@font/inter_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnContinue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>