<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:background="@color/bgColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/feature_payment_bg_rounded_12dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="36dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/feature_payment_ic_payment_failed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeaderTransactionFailed"
            style="@style/BigTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/feature_payment_transaction_failed"
            android:textColor="@color/color_282E3D"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivFailed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAmount"
            style="@style/CommonTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/feature_payment_amount_n"
            android:textColor="#A6435162"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderTransactionFailed" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/core_ui_separator"
            android:backgroundTint="#3D484D5C"
            app:layout_constraintTop_toBottomOf="@id/tvAmount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            style="@style/CommonTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/feature_payment_any_amount_deducted_will_be_refunded_within_n_days"
            android:textColor="#A6435162"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnTryOtherMethods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/feature_payment_bg_rounded_45dp"
            android:backgroundTint="@color/color_3C3357"
            android:gravity="center"
            android:paddingHorizontal="45dp"
            android:paddingVertical="20dp"
            android:text="@string/feature_payment_try_other_payment_method"
            android:textColor="@color/white"
            app:fontFamily="@font/inter_bold"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            app:textAllCaps="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCancel"
            style="@style/CommonTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            android:text="@string/feature_payment_cancel"
            android:textColor="@color/color_282E3D"
            app:fontFamily="@font/inter_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTryOtherMethods" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>