<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:background="@color/bgColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/feature_payment_bg_rounded_12dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="36dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/feature_payment_ic_payment_failed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeaderTransactionFailed"
            style="@style/BigTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/feature_payment_are_you_sure_you_want_to_cancel_payment"
            android:textColor="@color/color_282E3D"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivFailed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            style="@style/CommonTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/feature_payment_the_payment_request_will_get_cancelled"
            android:textColor="#A6435162"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderTransactionFailed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/feature_payment_bg_rounded_45dp"
            android:backgroundTint="@color/color_3C3357"
            android:gravity="center"
            android:paddingHorizontal="45dp"
            android:paddingVertical="20dp"
            android:text="@string/feature_payment_yes_cancel"
            android:textColor="@color/white"
            app:fontFamily="@font/inter_bold"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            app:textAllCaps="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnNotNow"
            style="@style/CommonTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            android:text="@string/feature_payment_not_now"
            android:textColor="@color/color_282E3D"
            app:fontFamily="@font/inter_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>