<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f9f9f9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_282E3D" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CommonTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/feature_payment_payment"
            android:textColor="@color/color_282E3D"
            app:fontFamily="@font/inter_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#14282E3D"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        style="@style/CommonTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/feature_payment_open_your_upi_and_complete_the_payment_request_from_jar"
        android:textColor="@color/color_282E3D"
        app:fontFamily="@font/inter_bold"
        app:layout_constraintTop_toBottomOf="@id/clToolbar" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/progressBarTimer"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="40dp"
        app:cpb_background_progressbar_color="@color/color_C4C4C4"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progress_max="100"
        app:cpb_progressbar_color="@color/color_3c3357"
        app:cpb_progressbar_color_direction="right_to_left"
        app:cpb_progressbar_width="5dp"
        app:cpb_round_border="true"
        app:cpb_start_angle="90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:cpb_progress="100" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivUpi"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/feature_payment_bg_circle_white"
        android:backgroundTint="@color/color_e4e4e4"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@id/progressBarTimer"
        app:layout_constraintEnd_toEndOf="@id/progressBarTimer"
        app:layout_constraintStart_toStartOf="@id/progressBarTimer"
        app:layout_constraintTop_toTopOf="@id/progressBarTimer"
        app:srcCompat="@drawable/feature_payment_ic_upi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTimer"
        style="@style/CommonTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="67dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/feature_payment_approve_payment_within"
        android:textColor="@color/color_282E3D"
        app:layout_constraintTop_toBottomOf="@id/ivUpi" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/core_ui_separator"
        android:backgroundTint="#3D484D5C"
        app:layout_constraintTop_toBottomOf="@id/tvTimer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNote"
        style="@style/SmallTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="67dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/feature_payment_note_please_dont_hit_back_until_the_transaction_is_complete"
        android:textColor="@color/color_282E3D"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:lineHeight="21sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:text="@string/feature_payment_cancel_payment"
        android:textColor="@color/color_776E94"
        app:fontFamily="@font/inter_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>