<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clUpiCollectCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/feature_payment_bg_rounded_12dp"
    android:paddingVertical="15dp"
    app:layout_constraintBottom_toTopOf="@id/barrier">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTopView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddNewUpi"
            style="@style/CommonTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/feature_payment_add_a_new_upi_id"
            android:textColor="@color/color_282E3D"
            app:fontFamily="@font/inter_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            style="@style/SmallTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/feature_payment_you_need_to_have_a_registered_upi_id"
            android:textColor="#776E94"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAddNewUpi"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivUpiApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:scaleType="fitStart"
            app:layout_constraintHeight_max="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            tools:src="@drawable/feature_payment_ic_upi" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            app:layout_constraintBottom_toBottomOf="@id/tvDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvDesc"
            app:srcCompat="@drawable/feature_payment_ic_add"
            app:tint="@color/color_3C3357" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expandableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        app:el_expanded="false"
        app:el_parallax="0"
        app:layout_constraintTop_toBottomOf="@id/clTopView"
        tools:el_expanded="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/flUpiAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/feature_payment_bg_rounded_8dp"
                android:backgroundTint="@color/color_F1F1F1"
                app:layout_constraintTop_toTopOf="parent">

                <com.jar.app.core_ui.widget.ClearFocusEditText
                    android:id="@+id/etUpiAddress"
                    style="@style/CommonTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="start|center_vertical"
                    android:hint="@string/feature_payment_enter_your_upi_id"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:minHeight="50dp"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/color_282E3D"
                    android:textColorHint="#4D000000" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvError"
                style="@style/SmallTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/feature_payment_incorrect_upi_id"
                android:textColor="@color/color_EB6A6E"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@id/flUpiAddress"
                app:layout_constraintTop_toBottomOf="@id/flUpiAddress" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnVerifyAndPay"
                style="@style/BigTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="10dp"
                android:alpha="0.25"
                android:background="@drawable/feature_payment_bg_rounded_24dp"
                android:backgroundTint="#2E2942"
                android:gravity="center"
                android:text="@string/feature_payment_verify_and_pay"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintTop_toBottomOf="@id/tvError" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </net.cachapa.expandablelayout.ExpandableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>